# simple-gal

./: .gitignore  .markdownlintignore  .release-sync-state.yaml  .shipit.toml  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  DEPENDENCIES.md  README-new.md  README.md  build.rs  lefthook.yml  lighttable.toml  local-build-and-serve.sh  package-lock.json  package.json  pixi.toml  playwright.config.ts  release.toml
.github/: copilot-instructions.md  homebrew-formula.rb.tmpl  pull_request_template.md  render-homebrew-formula.py
.github/actions/rust-setup/: action.yml
.github/workflows/: checks.yml  ci.yml  deploy.yml  docs.yml  release.yml  shipit-release.yml  test.yml
CHANGELOG/: legacy.md  unreleased-drop-dead-brew-render.md  unreleased-iptc-parser-nul-trim-and-tests.md  unreleased-migrate-to-fragment-directory.md  unreleased-strip-dead-release-toml.md
app-bin/: local-build-and-serve.sh
content/: config.toml
content/001-NY/: Q1021021.txt  Q1021299.txt
content/002-Greece/: description.txt
docs/: book.toml
docs/dev/: auto-reindex.md  data-model-refactor.md  photo-page-layout.md  testing.md
docs/proposals/: no-deps.md
docs/src/: CNAME  SUMMARY.md  getting-started.md  introduction.md
docs/src/configuration/: colors-and-theme.md  fonts.md  overview.md  reference.md
docs/src/content/: albums-and-groups.md  directory-structure.md  ordering-and-naming.md
docs/src/customization/: advanced.md  assets.md  css-and-js.md
docs/src/deployment/: github-actions.md  hosting.md  local.md
docs/src/images/: caching.md  processing.md  quality.md  responsive-sizes.md  thumbnails.md
docs/src/philosophy/: forever-stack.md
docs/src/pwa/: customizing.md  installation.md  overview.md
examples/: compare_backends.rs
fixtures/: README.md
fixtures/browser-content/: config.toml
fixtures/browser-content/020-With-Caption/: 001-landscape.txt  002-portrait.txt
fixtures/browser-content/030-With-Description/: 001-landscape.txt  002-portrait.txt
fixtures/content/: config.toml
fixtures/images/: 050-github.md  about.md  about.txt  config.toml
images/: about.md  about.txt  config.toml
scripts/: build.sh  diff-since-release  install-deps.sh  pre-commit  release  setup-dev-env.sh
src/: cache.rs  config.rs  generate.rs  json_output.rs  lib.rs  main.rs  metadata.rs  naming.rs  output.rs  process.rs  reindex.rs  scan.rs  test_helpers.rs  types.rs
src/imaging/: backend.rs  calculations.rs  iptc_parser.rs  mod.rs  operations.rs  params.rs  rust_backend.rs
static/: nav.js  site.webmanifest  style.css  sw.js
tests/: browser_layout.rs  browser_pwa.rs  browser_sw.rs  cli_build_reindex.rs  cli_config_errors.rs  cli_json.rs  cli_scan.rs  compare_backends.rs
tests/browser/: description-layout.spec.ts  helpers.ts  setup.ts
