[package]
name = "simple-gal"
version = "0.20.0"
edition = "2024"
description = "A minimal static site generator for fine art photography portfolios"
license = "MIT"
repository = "https://github.com/arthur-debert/simple-gal"
keywords = ["photography", "gallery", "static-site", "portfolio"]
categories = ["command-line-utilities"]
build = "build.rs"
exclude = ["fixtures/", "tests/", "scripts/", "*.config.*", "package.json", "package-lock.json", "DEPENDENCIES.md", "local-build-and-serve.sh"]

[dependencies]
clap = { version = "4", features = ["derive"] }
# clapfig owns site config: layered loading via the confique-derived
# `SiteConfig`, the `simple-gal config` subcommand group (gen|get|set|list|
# schema|unset), per-directory cascade via `Resolver::resolve_at`, and
# rich/plain rendering of TOML parse errors.
clapfig = { version = "0.15", default-features = false, features = ["clap", "rich-errors"] }
confique = { version = "0.4", default-features = false, features = ["toml"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "tiff", "webp",
    "avif",
] }
avif-parse = "2"
maud = "0.26"
rav1d = { version = "1", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
pulldown-cmark = "0.13"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
headless_chrome = "1"
