[package]
name = "simple-gal"
version = "0.20.0"
edition = "2024"
description = "A minimal static site generator for fine art photography portfolios"
license = "MIT"
repository = "https://github.com/arthur-debert/simple-gal"
keywords = ["photography", "gallery", "static-site", "portfolio"]
categories = ["command-line-utilities"]
build = "build.rs"
exclude = ["fixtures/", "tests/", "scripts/", "*.config.*", "package.json", "package-lock.json", "DEPENDENCIES.md", "local-build-and-serve.sh"]

# cargo-deb configuration. Driven by `cargo deb -p simple-gal` in CI.
# No maintainer scripts (debian/postinst, debian/prerm) — simple-gal has
# no `completion --shell X print` CLI to register on configure, and no
# other post-install state to manage.
[package.metadata.deb]
maintainer = "Arthur Debert <debert@gmail.com>"
copyright = "2026, Arthur Debert <debert@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """
simple-gal is a minimal static site generator for fine art photography
portfolios. It walks a content directory of images and produces a
responsive HTML gallery with pre-processed thumbnails, IPTC-driven
titles/descriptions, and inline CSS — no JavaScript runtime required
on the published site. Designed for photographers who want a
single-binary build pipeline.
"""
section = "graphics"
priority = "optional"
depends = "$auto"
assets = [
    # cargo-deb rewrites `target/release/` to `target/<triple>/release/`
    # automatically when `--target` is passed (as CI does), so this path
    # works for both native and cross-compiled builds.
    ["target/release/simple-gal", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/simple-gal/README.md", "644"],
    ["CHANGELOG.md", "usr/share/doc/simple-gal/CHANGELOG.md", "644"],
]

# CI builds each architecture separately with --target, so cargo-deb
# picks up the binary from target/<triple>/release/. Variants exist as
# extensibility hooks (e.g. arch-specific depends) — currently empty.
[package.metadata.deb.variants.amd64]
[package.metadata.deb.variants.arm64]

[dependencies]
clap = { version = "4", features = ["derive"] }
# clapfig owns site config: layered loading via the confique-derived
# `SiteConfig`, the `simple-gal config` subcommand group (gen|get|set|list|
# schema|unset), per-directory cascade via `Resolver::resolve_at`, and
# rich/plain rendering of TOML parse errors.
clapfig = { version = "0.15", default-features = false, features = ["clap", "rich-errors"] }
confique = { version = "0.4", default-features = false, features = ["toml"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "tiff", "webp",
    "avif",
] }
avif-parse = "2"
maud = "0.26"
rav1d = { version = "1", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
pulldown-cmark = "0.13"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
headless_chrome = "1"
